old/argocd/app/bookstack/base/ingress.yaml
---
# Source: bookstack/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
spec:
  tls:
    - hosts:
        - docs.wojoinc.xyz
      secretName: bookstack-cert
  rules:
    - host: "docs.wojoinc.xyz"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  number: 8080
